# CodexPlusPlus

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  README_EN.md
.cargo/: config.toml
apps/codex-plus-launcher/src/: main.rs
apps/codex-plus-manager/: package-lock.json  package.json
apps/codex-plus-manager/src/: App.tsx  i18n-en.ts  main.tsx  styles.css
apps/codex-plus-manager/src-tauri/: build.rs
apps/codex-plus-manager/src-tauri/src/: commands.rs  lib.rs
apps/codex-plus-manager/src-tauri/tests/: windows_subsystem.rs
apps/codex-plus-manager/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  switch.tsx  textarea.tsx
apps/codex-plus-packager/: Cargo.toml  build.rs
apps/codex-plus-packager/src/: lib.rs
assets/inject/: renderer-inject.js
crates/codex-plus-core/src/: ads.rs  launcher.rs  lib.rs  paths.rs  protocol_proxy.rs  relay_config.rs  routes.rs  settings.rs
crates/codex-plus-core/src/install/: windows.rs
crates/codex-plus-core/tests/: ads.rs  bridge_routes.rs  cdp_bridge.rs  launcher.rs  relay_config.rs
crates/codex-plus-data/src/: lib.rs
tools/: i18n-codemod.mjs  i18n-keys.json  i18n-verify.mjs
