[package]
name = "codex-plus-packager"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[build-dependencies]
# Build-time dependency on the manager library ensures the manager's cdylib
# (codex_plus_manager_lib.dll/.dylib/.so) is compiled before this build.rs
# runs, so the DLL is available to copy into the dist bundle. We intentionally
# do NOT use artifact dependencies (bindeps) here: that would force the manager
# binary to link before the packager runs, which is unreliable on some setups.
# The manager binary itself does not need to link successfully — only the lib.
codex-plus-manager = { path = "../codex-plus-manager/src-tauri" }
zip.workspace = true
